--- a/Pipfile
+++ b/Pipfile
@@ -34,6 +34,7 @@ zipp = "==3.1.0"
 Django = "==3.0.6"
 face_recognition_models = "==0.3.0"
 Pillow = "==7.1.2"
+python-decouple = "*"
 
 [requires]
 python_version = "3.6"
