--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ numpy==1.18.4
 Pillow==7.1.2
 pipenv==2020.6.2
 pytz==2020.1
-psycopg2==2.8.5
+psycopg2-binary
 six==1.15.0
 sqlparse==0.3.1
 tqdm==4.46.0
