--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,42 @@ filelock==3.0.12
 gunicorn==20.0.4
 importlib-metadata==1.6.1
 importlib-resources==2.0.1
-numpy==1.18.4
 Pillow==7.1.2
 pipenv==2020.6.2
-pytz==2020.1
+psycopg2==2.8.5
 psycopg2-binary==2.8.5
+python-decouple==3.3
+pytz==2020.1
+six==1.15.0
+sqlparse==0.3.1
+tqdm==4.46.0
+virtualenv==20.0.25
+virtualenv-clone==0.5.4
+whitenoise==5.1.0
+zipp==3.1.0
+appdirs==1.4.4
+asgiref==3.2.7
+certifi==2020.6.20
+click==7.1.2
+cmake==3.17.2
+distlib==0.3.0
+dj-database-url==0.5.0
+Django==3.0.6
+django-crispy-forms==1.9.1
+django-decouple==2.0
+dlib==19.20.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+filelock==3.0.12
+gunicorn==20.0.4
+importlib-metadata==1.6.1
+importlib-resources==2.0.1
+Pillow==7.1.2
+pipenv==2020.6.2
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
+python-decouple==3.3
+pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
 tqdm==4.46.0
