--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ Django==3.0.6
 django-crispy-forms==1.9.1
 django-decouple==2.0
 dlib==19.20.0
-face-recognition==1.3.0
-face-recognition-models==0.3.0
+#face-recognition==1.3.0
+#face-recognition-models==0.3.0
 filelock==3.0.12
 gunicorn==20.0.4
 importlib-metadata==1.6.1
