--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ importlib-metadata==1.6.1
 importlib-resources==2.0.1
 Pillow==7.1.2
 pipenv==2020.6.2
-psycopg2-binary==2.8.5
+psycopg2-binary
 python-decouple==3.3
 pytz==2020.1
 six==1.15.0
