--- a/requirements.txt
+++ b/requirements.txt
@@ -8,16 +8,13 @@ dj-database-url==0.5.0
 Django==1.11.29
 django-crispy-forms==1.9.0
 django-decouple==2.0
-dlib==19.20.0
-face-recognition==1.3.0
-face-recognition-models==0.3.0
 filelock==3.0.12
 gunicorn==19.10.0
 importlib-metadata==1.6.1
 importlib-resources==2.0.1
 Pillow==6.2.2
 pipenv==2020.6.2
-psycopg2-binary==2.8.5
+psycopg2==2.8.5
 python-decouple==3.3
 pytz==2020.1
 six==1.15.0
